basic home screen

--- a/quiz/public/index.html
+++ b/quiz/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
     <style>
-      html, body {
+      html, body, #root, #app>div {
         height: 100%;
         width: 100%;
       }
